<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ciudad"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_margin="16dp"
        android:background="@color/color_ciudad"
        android:text="@string/texto_bienvenida"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_grados" />

    <Button
        android:id="@+id/bCancun"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textp_boton_cancun" />

    <Button
        android:id="@+id/bfcp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textp_boton_fcp" />

    <Button
        android:id="@+id/bChetumal"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textp_boton_chetumal" />

    <Button
        android:id="@+id/bBacalar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textp_boton_bacalar" />
</LinearLayout>