<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="513dp"
        android:text="@string/texto_grados"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/color_grados"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="350dp"
        android:layout_height="102dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="406dp"
        android:text="@string/texto_ciudad"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_ciudad"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="132dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="369dp"
        android:text="@string/texto_estatus"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/color_estatus"
        android:textSize="24sp" />
</RelativeLayout>